# driver

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  build.sh
examples/devmng/0_device_p2p/: CMakeLists.txt  README.md  main.c  run.sh
examples/resmng/svm/0_svm_memcpy/: CMakeLists.txt  run.sh  svm_main.c
src/ascend_hal/: CMakeLists.txt
src/ascend_hal/ascend_base_hal/: uda_inner.h  uda_user_base.h
src/ascend_hal/bbox/: CMakeLists.txt  bbox_adapt.c  bbox_comm_adapt.h
src/ascend_hal/bbox/bbox_excep_mgr/: CMakeLists.txt
src/ascend_hal/bbox/bbox_tools/: CMakeLists.txt
src/ascend_hal/bbox/cmake/: bbox_func_pub.cmake  bbox_intf_pub.cmake
src/ascend_hal/buff/dc/: CMakeLists.txt
src/ascend_hal/comm/ascend_urma_adapt/: CMakeLists.txt  ascend_urma_ctx.c  ascend_urma_ctx.h  ascend_urma_dev.c  ascend_urma_dev.h  ascend_urma_init.c  ascend_urma_log.h  ascend_urma_pub.h  ascend_urma_raw.c  ascend_urma_seg.c  ascend_urma_token.c  ascend_urma_token.h
src/ascend_hal/commlib/: CMakeLists.txt  atomic_lock.c  atomic_lock.h  atomic_ref.c  atomic_ref.h  drv_comm_intf.c  drv_comm_intf.h  drv_error_map.c  drv_user_list.c  drv_user_list.h  uref.h
src/ascend_hal/dmc/: CMakeLists.txt
src/ascend_hal/dmc/device_monitor/: CMakeLists.txt
src/ascend_hal/dmc/dsmi/: CMakeLists.txt
src/ascend_hal/dmc/logdrv/: CMakeLists.txt  drv_log_user.c  drv_log_user_common.c  drv_log_user_kernel_api.c  drv_log_user_kernel_api.h  drv_share_log.c
src/ascend_hal/dmc/prof/: CMakeLists.txt  prof_comm.h  prof_common.h  prof_hdc_msg.h  prof_interface.c
src/ascend_hal/dmc/verify_tool/: CMakeLists.txt
src/ascend_hal/dms/: CMakeLists.txt
src/ascend_hal/dms/bbox/: CMakeLists.txt  dms_bbox_info.c
src/ascend_hal/dms/board/: CMakeLists.txt  dms_cc.c  dms_device_info.c  dms_gpio.c  dms_p2p_attr.c  dms_topology.c
src/ascend_hal/dms/chip/: CMakeLists.txt
src/ascend_hal/dms/common/: CMakeLists.txt  dms_user_common.c  dms_user_common.h
src/ascend_hal/dms/communication/: CMakeLists.txt  dms_communication_info.c
src/ascend_hal/dpa/: CMakeLists.txt
src/ascend_hal/esched/: CMakeLists.txt  esched_adapt.c  esched_drv_interface.h  esched_topic_sqe.c  esched_topic_sqe.h  topic_sched_drv_interface.h
src/ascend_hal/hdc/: CMakeLists.txt
src/ascend_hal/inc/: buff_user_interface.h  comm_user_interface.h  davinci_interface.h  dev_mon_ops_manager.h  devdrv_hardware_version.h  devdrv_user_common.h  dmc_user_interface.h  dms_user_interface.h  dpa_user_interface.h  drv_type.h  drv_user_common.h  esched_user_interface.h  hdc_user_interface.h  pbl_user_interface.h  queue_user_interface.h  svm_user_interface.h  trs_user_interface.h  tsdrv_user_common.h  tsdrv_user_interface.h  udis_user.h  user_cfg_public.h
src/ascend_hal/mmpa/: CMakeLists.txt  dll-mmpa.sln  mmpa_x64_dbg_build.bat
src/ascend_hal/msnpureport/: CMakeLists.txt  module.mk  msnpureport.c  msnpureport_common.h
src/ascend_hal/pbl/: CMakeLists.txt
src/ascend_hal/queryfeature/: CMakeLists.txt  query_feature.c  query_feature.h
src/ascend_hal/roce/: CMakeLists.txt  README.md
src/ascend_hal/svm/: CMakeLists.txt  README.md
src/ascend_hal/trs/: CMakeLists.txt
src/ascend_hal/tsdrv/: tsdrv_conflict_check.h
src/custom/: CMakeLists.txt
src/custom/cmake/: driver_device_fetch.cmake  package_ascend910B.cmake
src/custom/include/: dcmi_interface_api.h  dev_mon_cmd.h  dev_mon_cmd_manager.h  dev_mon_cmd_manager_ext.h  dms_product_ioctl.h  dsmi_common_interface_custom.h  dsmi_network_interface.h
src/custom/ndr/: CMakeLists.txt  Makefile  find_ofed_symvers.sh  module.mk  ndr_log.h  npu_peermem.c  peer_mem.h
src/custom/network/: CMakeLists.txt
src/custom/ops_debug/: CMakeLists.txt  Makefile  debug_aoscore.cmake  debug_dma.c  debug_dma.h  debug_drv_dev.c  debug_switch.c  module.mk
src/sdk_driver/: CMakeLists.txt
src/sdk_driver/buff/: CMakeLists.txt
src/sdk_driver/comm/: CMakeLists.txt
src/sdk_driver/dms/: CMakeLists.txt  Makefile  dms_module.c  dms_module.h
src/sdk_driver/dpa/: CMakeLists.txt  Makefile  dpa_init.c
src/sdk_driver/fms/: CMakeLists.txt  Makefile  fms_define.h  fms_module.c  fms_module.h
src/sdk_driver/hdc/: CMakeLists.txt  Makefile
src/sdk_driver/inc/: adapter_api.h  addr_trans.h  ascend_dev_num.h  ascend_kernel_hal.h  comm_kernel_interface.h  davinci_interface.h  dev_mon_cmd_def.h  devdrv_driver_pm.h  devdrv_hardware_version.h  devdrv_user_common.h  devdrv_user_common_msg.h  dmc_kernel_interface.h  dms_kernel_interface.h  dpa_kernel_interface.h  drv_systime.h  drv_type.h  esched_kernel_interface.h  esched_kernel_interface_cmd.h  fms_kernel_interface.h  hbm_user_type.h  hdc_kernel_interface.h  hvtsdrv_tsagent.h  hwts_task_info.h  kernel_cgroup_mem_adapt.h  kernel_version_adapt.h  pair_dev_info.h  pbl_kernel_interface.h  svm_kernel_interface.h  tsdrv_interface.h  tsdrv_kernel_common.h  udis.h  urd_msg.h  vmng_cmd_msg.h  vmng_kernel_interface.h  vmng_kernel_interface_cmd.h  vpc_kernel_interface.h
src/sdk_driver/kernel_adapt/: CMakeLists.txt  Makefile  ka_module_init.c  kernel_adapt_init.h
src/sdk_driver/pbl/: CMakeLists.txt  Makefile  pbl_module.c  pbl_module.h
src/sdk_driver/queue/: CMakeLists.txt
src/sdk_driver/seclib/: securecmodule.c
src/sdk_driver/svm/: CMakeLists.txt
src/sdk_driver/trs/: CMakeLists.txt  Makefile  trs_init.c
src/sdk_driver/trsbase/: CMakeLists.txt  Makefile  trsbase_init.c
src/sdk_driver/ts_agent/: CMakeLists.txt  Makefile  module.mk
src/sdk_driver/vascend/: CMakeLists.txt  Makefile  cfg_space.c  debugfs.c  dma_pool.c  dma_pool.h  dma_pool_map.c  dma_pool_map.h  dma_pool_pt.c  domain_manage.c  domain_manage.h  dvt.c  dvt.h  dvt_sriov.c  dvt_sysfs.c  dvt_sysfs.h  hw_dvt.c  hw_vdavinci.h  interface.c  kvmdt.c  kvmdt.h  kvmdt_dma.c  log.h  mmio.c  mmio.h  vdavinci.c  vdavinci_rdwr.c  vfio_ops.c  vfio_ops.h
src/sdk_driver/vmng/: CMakeLists.txt
src/sdk_driver/vnic/: CMakeLists.txt  Makefile
src/sdk_driver/vpc/: CMakeLists.txt  Makefile
test/ut/: CMakeLists.txt
test/ut/common/: main.cc
(+3602 files in other folders)
