# ------------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# ------------------------------------------------------------------------------------------------------------
add_subdirectory(queue)
add_subdirectory(esched)
add_subdirectory(buff)
add_subdirectory(trsbase)
add_subdirectory(comm)
add_subdirectory(hdc)
add_subdirectory(vmng)
add_subdirectory(vnic)
add_subdirectory(vpc)
add_subdirectory(kernel_adapt)
add_subdirectory(dpa)
add_subdirectory(trs)
add_subdirectory(svm)
add_subdirectory(platform/soc_platform)
add_subdirectory(dms)
add_subdirectory(fms)
add_subdirectory(pbl)
add_subdirectory(vascend)
add_subdirectory(ts_agent)
add_subdirectory(ts_agent/src)

